# dependency-graph

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  query_dependencies_benchmark.cpp
include/: buffer_graph.hpp  config.hpp  dependency_graph.hpp  disk_graph.hpp  disk_vector.hpp  gpu_dependency_graph.hpp  gpu_graph.hpp  graph_view.hpp  package_loader.hpp  result_model.hpp  string_map.hpp  string_pool.hpp  symbol_table.hpp  types.hpp  util.hpp
include/details/: disk_vector.ipp  string_pool.ipp  symbol_table.ipp
py/: basic_types.py  dependency_graph.py  package_loader.py  test.py
results/: correctness_test_result.json  query_dependencies_benchmark-100-result.json  query_dependencies_benchmark-200-result.json  query_dependencies_benchmark-388-result.json  query_dependencies_benchmark-50-result.json  query_dependencies_benchmark_result.json  query_dependencies_correctness_test-create-result.json  query_dependencies_correctness_test-load-result.json  query_dependencies_correctness_test_result.json
src/: CMakeLists.txt  buffer_graph.cpp  console.cpp  dependency_graph.cpp  dependency_graph.cu  disk_graph.cpp  gpu_dependency_graph.cu  gpu_graph.cu  package_loader.cpp
tests/: CMakeLists.txt  query_dependencies_correctness_test.cpp
